# AfpViewerEx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain-llvm-mingw-x64.cmake  vcpkg.json
.github/workflows/: build-llvm.yml
src/: afp_scene.cc  afp_scene.h  capture_controller.cc  capture_controller.h  entrypoint.cc  frame_capture.cc  frame_capture.h  frame_exporter.cc  frame_exporter.h  memory.cc  memory.h  modules.cc  modules.h  scope_exit.h
